--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -28,7 +28,9 @@ $theme-color--background: $blue-palest;
 
 $theme-green: #15cf89;
 $theme-green--hover: rgb(25, 194, 129);
+$theme-green--dark: #14b175;
 $theme-green--light: #78d5b2;
+$theme-green--lighter: rgb(189, 221, 208);
 
 $box-shadow: 0px 3px 6px $light-grey;
 $box-shadow-dark: 0px 3px 6px $dark-grey;
