--- a/src/UI/DynamicForm/components/DynamicForm.scss
+++ b/src/UI/DynamicForm/components/DynamicForm.scss
@@ -58,7 +58,7 @@ SUBMIT BUTTON
 }
 .form-btn--disabled {
   @include system-button($lighter-grey, $lighter-grey);
-  cursor: disabled;
+  cursor: unset;
   width: 200px;
 }
 .hline,
