--- a/src/Map/Location.scss
+++ b/src/Map/Location.scss
@@ -61,3 +61,19 @@
     font-size: 14px;
     color: $dark-grey;
 }
+
+.location--add-review-container {
+    width: calc(100% + 40px);
+    margin-left: -20px;
+    border-bottom: 1px solid $light-grey;
+}
+
+.location--btn {
+    @include system-button($blue, $blue-hover);
+    font-weight: 600;
+    width: auto;
+    padding: 10px 20px;
+    font-size: 12px;
+    margin: 20px auto;
+    box-shadow: $box-shadow;
+}
