--- a/src/ReviewForm/ReviewForm.scss
+++ b/src/ReviewForm/ReviewForm.scss
@@ -2,7 +2,7 @@
 
 
 .review-form--page {
-    background-color: $palest-grey;
+    // background-color: $palest-grey;
     height: 100vh;
     width: 70vw;
     display: flex;
