--- a/src/UI/DynamicForm/components/DynamicFormMaker/FormBtns.scss
+++ b/src/UI/DynamicForm/components/DynamicFormMaker/FormBtns.scss
@@ -46,3 +46,21 @@
     width: 90px;
     justify-self: end;
 }
+
+.btn--cancel {
+    @include system-button--sub($lighter-grey, $grey);
+    width: 90px;
+    height: 40px;
+    // margin: 0 auto;
+    padding: 8px 16px;
+    float: left;
+}
+
+.btn-row {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    .form-btn {
+        margin: 0px;
+    }
+}
