--- a/src/ReviewForm/ReviewForm.scss
+++ b/src/ReviewForm/ReviewForm.scss
@@ -14,9 +14,14 @@
 
 .review-form--container {
     width: 450px;
+    height: 100%;
     padding: 30px;
     background-color: white;
     box-shadow: $box-shadow;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     box-sizing: content-box;
 }
