--- a/src/ReviewForm/ReviewForm.scss
+++ b/src/ReviewForm/ReviewForm.scss
@@ -14,7 +14,6 @@
 
 .review-form--container {
     width: 450px;
-    height: 100%;
     padding: 30px;
     background-color: white;
     box-shadow: $box-shadow;
@@ -24,6 +23,11 @@
     justify-content: center;
 
     box-sizing: content-box;
+
+    @media (max-width: 900px)  {
+       height: 100%;
+       width: 100%;
+    }
 
     h2 {
         text-align: center;
