--- a/src/Map/Ratings.scss
+++ b/src/Map/Ratings.scss
@@ -1,9 +1,10 @@
 @import 'styles/_shared.scss';
 
 .rating--small {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     object-fit: contain;
+    margin: 3px;
 }
 
 .rating--aggregate-container {
@@ -38,8 +39,8 @@
     }
 
     .rating--medium {
-        width: 35px;
-        height: 35px;
+        width: 30px;
+        height: 30px;
         object-fit: contain;
     }
 
@@ -55,9 +56,12 @@
 }
 
 .rating--medium {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     object-fit: contain;
+    box-shadow: $box-shadow;
+    border-radius: 50%;
+    margin: 5px;
 }
 
 .rating--text {
