--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -35,6 +35,11 @@ $theme-green--dark: #14b175;
 $theme-green--light: #78d5b2;
 $theme-green--lighter: rgb(189, 221, 208);
 
+$general: #1BDDC6;
+$medical: #CC4F46;
+$schools: #FFC200;
+$bathrooms: #4E4EF9;
+
 $box-shadow: 0px 3px 6px $light-grey;
 $box-shadow-dark: 0px 3px 6px $dark-grey;
 $box-shadow-blue: 0px 3px 6px $blue;
