--- a/src/Map/Map.scss
+++ b/src/Map/Map.scss
@@ -87,6 +87,13 @@
                 &:hover {
                     background: $attention-red;
                 }
+
+                &.active {
+                    border: 2px solid black;
+                    height: 32px;
+                    padding: 6px 12px;
+                    box-sizing: border-box;
+                }
             }
         }
 
