--- a/src/Map/Map.scss
+++ b/src/Map/Map.scss
@@ -34,6 +34,7 @@
         margin: 0 auto;
         max-width: 400px;
         border-radius: 0 0 8px 8px;
+        box-shadow: $box-shadow;
         transition: 0.6s ease all;
 
         .search {
