--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -37,8 +37,8 @@ $theme-green--lighter: rgb(189, 221, 208);
 
 $general: #1BDDC6;
 $general--hover: rgb(24, 207, 186);
-$medical: #CC4F46;
-$medical--hover: rgb(192, 64, 55);
+$medical: #D243D6;
+$medical--hover: rgb(194, 52, 199);
 $schools: #FFC200;
 $schools--hover: rgb(226, 173, 0);
 $bathrooms: #4E4EF9;
