--- a/src/UI/DynamicForm/components/DynamicForm.scss
+++ b/src/UI/DynamicForm/components/DynamicForm.scss
@@ -566,4 +566,11 @@ TOGGLE
       color: $attention-red;
     }
   }
+
+}
+.form-img {
+  width: 40px;
+  height: 50px;
+  object-fit: contain;
+  border-radius: 50%;
 }
